--- a/index.html
+++ b/index.html
@@ -180,7 +180,22 @@
     <p class="setup-similar-label">Петр Петров</p>
   </div>
 </template>
+<script>
+  var fireballSize = 22;
+  var getFireballSpeed = function (left) {
+     return left ? 5 : 2;
+  }
 
+  var wizardSpeed = 3;
+  var wizardWidth = 70;
+  var getWizardHeight = wizardWidth * 1.337;
+  var getWizardX = function (width) {
+    return math.Round(width / 2 - wizardWidth / 2);
+  }
+  var getWizardY = function (height) {
+    return math.Round(height * 0.67 - getWizardHeight());
+  }
+</script>
 <script src="js/game.js"></script>
 
 </body>
