--- a/index.html
+++ b/index.html
@@ -200,7 +200,8 @@
       return height / 3;
     }
   </script>
-<script src="js/game.js"></script>
+  <script src="js/game.js"></script>
+<script src="js/stat.js"></script>
 
 </body>
 </html>
