--- a/index.html
+++ b/index.html
@@ -202,7 +202,10 @@
   </script>
   <script src="js/game.js"></script>
   <script src="js/stat.js"></script>
+  <script src="js/random.js"></script>
+  <script src="js/wizard.js"></script>
   <script src="js/setup.js"></script>
-
+  <script src="js/drag.js"></script>
+  <script src="js/star.js"></script>
 </body>
 </html>
