--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@
   </script>
   <script src="js/game.js"></script>
   <script src="js/stat.js"></script>
-  <script src="js/random.js"></script>
+  <script src="js/variables.js"></script>
+  <script src="js/util.js"></script>
   <script src="js/wizard.js"></script>
   <script src="js/setup.js"></script>
   <script src="js/drag.js"></script>
