Учебный проект: pimp my mage

--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
         </div>
         <input type="hidden" name="coat-color" value="rgb(101, 137, 164)">
         <input type="hidden" name="eyes-color" value="black">
-      </div>
+
 
       <div class="setup-fireball-wrap">
         <div class="setup-fireball"></div>
-        <input type="hidden" name="fireball-color" value="#ee4830">
+        <input type="hidden"  class="fireball-color" name="fireball-color" value="#ee4830">
       </div>
-
+    </div>
       <div class="setup-artifacts" dropzone="move">
         <div class="setup-artifacts-cell"></div>
         <div class="setup-artifacts-cell"></div>
@@ -200,6 +200,8 @@
       return height / 3;
     }
   </script>
+  <script src="js/backend.js"></script>
+  <script src="js/error.js"></script>
   <script src="js/game.js"></script>
   <script src="js/stat.js"></script>
   <script src="js/variables.js"></script>
