--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
   <script src="js/util.js"></script>
   <script src="js/backend.js"></script>
   <script src="js/error.js"></script>
+  <script src="js/form.js"></script>
   <script src="js/wizard.js"></script>
   <script src="js/setup.js"></script>
   <script src="js/drag.js"></script>
