--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
   <script src="js/error.js"></script>
   <script src="js/form.js"></script>
   <script src="js/wizard.js"></script>
+  <script src="js/similar.js"></script>
   <script src="js/setup.js"></script>
   <script src="js/drag.js"></script>
   <script src="js/star.js"></script>
