--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
   <script src="js/backend.js"></script>
   <script src="js/error.js"></script>
   <script src="js/form.js"></script>
-  <script src="js/wizard.js"></script>
+  <script src="js/wizardShow.js"></script>
   <script src="js/similar.js"></script>
   <script src="js/setup.js"></script>
   <script src="js/drag.js"></script>
