--- a/index.html
+++ b/index.html
@@ -209,8 +209,10 @@
   <script src="js/form.js"></script>
   <script src="js/wizardShow.js"></script>
   <script src="js/similar.js"></script>
+  <script src="js/debounce.js"></script>
   <script src="js/setup.js"></script>
   <script src="js/drag.js"></script>
   <script src="js/star.js"></script>
+
 </body>
 </html>
